# spca-ai-assistant

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  HTTPS-DEPLOYMENT-COMPLETE.md  IMPORTANT-env-reload.sh  README.md  TESTING.md  deploy.sh  docker-compose.yml  env.template  extra_info.md  file_search.py  general_scraping_log.txt  nginx-devnook.xyz.conf  pyproject.toml  quick-commands.sh  requirements-dev.txt  requirements.txt  run.sh  test_chatbot.html  update-api-key.sh  update-test-page.sh
config/: config.yaml
migrations/: 001_add_content_hash_to_sync_log.sql  002_convert_images_url_to_jsonb.sql  README.md
src/api/: main.py  schemas.py
src/api/routes/: chat.py  health.py
src/chatbot/: gemini_client.py  prompt_templates.py  session_manager.py
src/database/: models.py  session.py
src/database/repositories/: animal_repository.py  base.py  scrape_repository.py
src/pipeline/: events.py  orchestrator.py  scheduler.py
src/scrapers/: animal_scraper.py  base.py  content_scraper.py  factory.py  sitemap_crawler.py  url_categorizer.py
src/sync/: content_uploader.py  file_search_client.py
src/utils/: config.py  logging.py
widget/: README.md  example.html
widget/src/: index.js  styles.css
widget/src/i18n/: en.json  fr.json
